src/objects/OIFProgramFlagJunction__c.object
<CustomObject>
    <description>Requirement 1454: In order to achieve many-many relationship between OIF and Program Flag. will be creating this junction object</description>
    <fields>
        <fullName>Is_Flag_Active__c</fullName>
        <description>(from PFD object field)</description>
        <formula>Program_Flag_Data__r.Is_Flag_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If flag is inactive, it can&apos;t be selected in an opportunity</inlineHelpText>
        <label>Is Flag Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OIF_Oppt_ID__c</fullName>
        <description>SDC Created</description>
        <formula>Order_Intake_Forecast__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OIF_Oppt_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Intake_Forecast__c</fullName>
        <description>Requirement 1454: We need to create many-many relationship between OIF and program flag</description>
        <label>Order Intake Forecast</label>
        <referenceTo>Order_Intake_Forecast__c</referenceTo>
        <relationshipName>OIFProgramFlagJunction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Flag_Data__c</fullName>
        <description>Requirement 1454: We need to create many-many relationship between OIF and program flag</description>
        <label>Program Flag Data</label>
        <referenceTo>Program_Flag__c</referenceTo>
        <relationshipName>OIFProgramFlagJunction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>OIF Program Flag Junction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OIFProgramFlagJunction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OIF Program Flag Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>